# HouseMktAnalyzr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TO-DOS.md  analyze_condition_scoring.py  build_script.py  download_parks_data.py  gen_script.py  gen_validator.py  manual_batch_condition_scoring.py  manual_enrich_walkscores.py  manual_geo_enrichment.py  pyproject.toml  railway.json  requirements.txt  test_batch_scoring.py  validate_livability.py  write_script.py  write_validator.py
.claude/agents/: implementer.md  pipeline-expert.md  validator.md
.planning/: BRIEF.md  ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-data-collection/: 02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  FINDINGS.md  RESEARCH.md
.planning/phases/03-analysis-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-dashboard/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-alerts/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
backend/: .env.example  requirements.txt
backend/app/: __init__.py  alert_checker.py  auth.py  constants.py  data_validator.py  db.py  email_sender.py  geo_mapping.py  main.py  scraper_worker.py
data/: quebec_parks.json
frontend/: next.config.ts  package-lock.json  package.json
src/housemktanalyzr/: __init__.py  config.py
src/housemktanalyzr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_calculator.py  test_ranker.py
(+114 files in other folders)
